# agent-dna

./: README.md  pyproject.toml  wrangler.toml
agent_dna/: __init__.py  evolution.py  fitness.py  genome.py  population.py  traits.py
src/: worker.ts
tests/: test_evolution.py  test_fitness.py  test_genome.py  test_population.py  test_traits.py
